--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -59,4 +59,7 @@ nav {
 		font-size: 1.8rem;
 		margin-right: 2rem;
 	}
+	h1.title {
+		font-size: 1.3rem;
+	}
 }
